SERVER-27281 pkill/pgrep cannot find mongod on Linux